--- a/visit_contact_javascript/Home.html
+++ b/visit_contact_javascript/Home.html
@@ -22,50 +22,13 @@
   </style>
 
   	<script type="text/javascript"
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAGlqSxemosfmjOKptY5XtBy-bB98ZKWpA">
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDJYAUEZPCeriV5EQYDoF7cXBUgKo-j03w">
     </script>
-
+    <!-- old api key arturo -AIzaSyAGlqSxemosfmjOKptY5XtBy-bB98ZKWpA -->
   <script src="./Home_files/jquery.min.js" type="text/javascript"></script>
 
 
-  <script type="text/javascript">
-      function initialize() {
-        
-        var myLatlng = new google.maps.LatLng(3.150299, 101.652799);
-
-        var mapOptions = {
-          center: myLatlng, // { lat: 3.150290, lng: 101.653260},
-          zoom: 20
-        };
-        
-        var map = new google.maps.Map(
-          document.getElementById('map-canvas'),
-          mapOptions
-        );
-
-        var marker = new google.maps.Marker({
-          position: myLatlng,
-          map: map,
-          title:"Hello World!"
-      });
-
-      }
-
-		// google.maps.event.addDomListener(window, "resize", function() {
-		//   var center = map.getCenter();
-		//   google.maps.event.trigger(map, "resize");
-		//   map.setCenter(center); 
-		//   console.log('test');
-		// });
-
-		// google.maps.event.addDomListener(window, 'resize', function() {
-  		//		map.panTo(myLatlng);
-		// });
-
-		google.maps.event.addDomListener(window, 'resize', initialize);
-      	google.maps.event.addDomListener(window, 'load', initialize);
-
-    </script>
+<script src="js/arturo-map.js" type="text/javascript">
 
 
 <!--[if lt IE 9]>
@@ -88,7 +51,14 @@
 </head>
 <body id="home" cz-shortcut-listen="true">
 
+
+	<!-- Google Maps Javascript API -->
 	<div id="map-canvas" style="width:100%;height:100%;"></div>
+
+
+
+
+
 
 <div class="bordertop"></div>
 
@@ -132,6 +102,13 @@
 		<div id="visit-popup-container" class="hide pop-up-container visit-container">
 			<div class="visit-popup-container--inner">
 				<div class="visit-red">
+
+					<div class="edu-city-campus campus active">
+						<span id="edu-btn" href="#" class="campus-title edu-btn" data-id="1"> Edu <br/> Campus </span>
+					</div>
+					<div class="city-campus campus">
+						<span id="city-btn" href="#" class="campus-title city-btn" data-id="2"> City <br/> Campus </span>
+					</div>
 
 				</div>
 
