update accordion and map

--- a/visit_contact_javascript/Home.html
+++ b/visit_contact_javascript/Home.html
@@ -104,7 +104,7 @@
 				<div class="visit-red">
 
 					<div class="edu-city-campus campus active">
-						<span id="edu-btn" href="#" class="campus-title edu-btn" data-id="1"> Edu <br/> Campus </span>
+						<span id="edu-btn" href="#" class="campus-title edu-btn" data-id="1"> Educity <br/> Campus </span>
 					</div>
 					<div class="city-campus campus">
 						<span id="city-btn" href="#" class="campus-title city-btn" data-id="2"> City <br/> Campus </span>
